@@ -102,6 +102,7 @@ struct lldpd_hardware hardware1 = {
 	.h_insert_cnt = 100,
 	.h_delete_cnt = 5,
 	.h_ageout_cnt = 20,
+	.h_drop_cnt = 1,
 	.h_lport = {
 		.p_chassis    = &chassis1,
 		.p_lastchange = 200,
@@ -184,6 +185,7 @@ struct lldpd_hardware hardware2 = {
 	.h_insert_cnt = 1000,
 	.h_delete_cnt = 51,
 	.h_ageout_cnt = 210,
+	.h_drop_cnt = 1,
 	.h_lport = {
 		.p_chassis    = &chassis1,
 		.p_lastchange = 50,
@@ -362,7 +364,7 @@ struct tree_node snmp_tree[] = {
 	{ {1, 2, 1, 0}, 4, ASN_TIMETICKS, { .integer = 10000 } },/* lldpStatsRemTablesLastChangeTime */
 	{ {1, 2, 2, 0}, 4, ASN_GAUGE,     { .integer = 1100 } }, /* lldpStatsRemTablesInserts */
 	{ {1, 2, 3, 0}, 4, ASN_GAUGE,     { .integer = 56 } }, /* lldpStatsRemTablesDeletes */
-	{ {1, 2, 4, 0}, 4, ASN_GAUGE,     { .integer = 0 } }, /* lldpStatsRemTablesDrops */
+	{ {1, 2, 4, 0}, 4, ASN_GAUGE,     { .integer = 2 } }, /* lldpStatsRemTablesDrops */
 	{ {1, 2, 5, 0}, 4, ASN_GAUGE,     { .integer = 230 } }, /* lldpStatsRemTablesAgeouts */
 
 	{ {1, 2, 6, 1, 2, 3}, 6, ASN_COUNTER, { .integer = 1352 } }, /* lldpStatsTxPortFramesTotal.3 */
