@@ -4,6 +4,7 @@ lldpd (0.7.2)
       /etc/lldpd.d. All commands accepted by lldpcli are accepted.
     + Lock BPF interfaces before handing them to chrooted process on
       BSD.
+    + Limit the number of neighbors for each port to 4 (per protocol).
   * Fixes:
     + Driver whitelisting is done before checking if an interface has
       a lower interface in Linux.
